Fixed labelalign=end and throbber on TB

--- a/skin/pinstripe/sunbird/tbOverlay.css
+++ b/skin/pinstripe/sunbird/tbOverlay.css
@@ -12,12 +12,12 @@
   background: none;
 }
 
-#throbber-box[busy="true"] {
-  list-style-image: url("chrome://global/skin/icons/loading_16.png");
-}
-
 #wrapper-throbber-box > #throbber-box {
   list-style-image: url("chrome://global/skin/icons/notloading_16.png");
+}
+
+#navigator-throbber[busy="true"] {
+  list-style-image: url("chrome://global/skin/icons/loading_16.png");
 }
 
 #offline-status-tb {
@@ -30,4 +30,10 @@
 
 #offline-status-tb {
   list-style-image: url("chrome://messenger/skin/icons/online.png");
+}
+
+toolbox[labelalign="end"] .cal-toolbarbutton-1,
+toolbox[labelalign="end"] .cal-toolbarbutton-1[type="menu-button"]
+  > .toolbarbutton-menubutton-button {
+  -moz-box-orient: horizontal !important;
 }
